fix: improve contrast of yellow text in light mode
Reason: The yellow text to me appeared a bit challenging for me to read
in light mode. I slightly dimmed the yellow and maxed the saturation
which should do the trick.

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,10 +14,11 @@ body.dark {
   color: var(--dark-fg);
   background-color: var(--dark-bg);
   --code-block: #363636;
+  --wayland-yellow: #F4B60B;
 }
 
 :root {
-  --wayland-yellow: #F4B60B;
+  --wayland-yellow: #E9AB00;
   --bg: #f5f5f5;
   --fg: #1B1B1B;
   --dark-fg: #E5E5E5;
